# nacreous.lute

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake/: options.cmake  warnings.cmake
docs/adr/: 0001-fetch-commit-cycle-operators.md
src/app/: CMakeLists.txt  taskmanager_main.cpp
src/core/: CMakeLists.txt  assertion.h
src/runtime/: CMakeLists.txt  run.h  run_taskmanager.cpp  runtime_context.h
src/runtime/bootstrap/: cli.cpp  cli.h  daemon_bootstrap.h  runtime_mode.h  taskmanager_bootstrap.cpp  taskmanager_bootstrap.h
src/runtime/config/: config.cpp  config.h
src/runtime/lifecycle/: shutdown_manager.cpp  shutdown_manager.h  signal_install.cpp  signal_install.h
src/runtime/logging/: log_init.cpp  log_init.h
src/taskmanager/channels/: Channel.h  IChannel.h  InMemoryChannel.h
src/taskmanager/gates/: InputGate.h
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/taskmanager/channels/: InMemoryChannelTest.cpp
